--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -516,7 +516,7 @@ CDROM.  The "available" file shows that the vim package is in section
 "editors":
 .br
 \fB     cd /cdrom/hamm/hamm/binary/editors\fP
-\fB     dpkg -i vim_4.5-3.tar.gz\fP
+\fB     dpkg -i vim_4.5-3.deb\fP
 .br
 
 To make a local copy of the package selection states:
