--- a/ChangeLog
+++ b/ChangeLog
@@ -15,8 +15,9 @@ Mon Oct 18 09:25:30 EDT 1999 Ben Collins <bcollins.debian.org>
   * Regenerated .po files and dpkg.pot. Also added update.sh to the po/
     subdir for easier regenerating for cvs only
   * Make release.sh generate .gmo files
-  * Removed shlibs.default.i386. This is an obsolete file. We also no
-    longer use /etc/dpkg/ directory.
+  * Removed shlibs.default.i386. It's now a template for arch porting to
+    Debian/dpkg, we install it still, if there exists a file matching the
+    arch
 
 Sun Oct 17 13:40:46 EDT 1999 Ben Collins <bcollins.debian.org>
 
