--- a/debian/changelog
+++ b/debian/changelog
@@ -34,8 +34,9 @@ dpkg (1.4.1.17) unstable; urgency=low
   * Use DESTDIR when installing instead of specifying all our
     dest dirs seperately in the make line. Also fix some of the
     make files to use DESTDIR when installing files
-  * Removed shlibs.default.i386. This is an obsolete file. We also no
-    longer use /etc/dpkg/ directory.
+  * Removed shlibs.default.i386. It's now a template for arch porting to
+    Debian/dpkg, we install it still, if there exists a file matching the
+    arch
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
