ooops, missed two --no-check references...silly nroff formatting

--- a/dpkg-deb/dpkg-deb.1
+++ b/dpkg-deb/dpkg-deb.1
@@ -61,7 +61,7 @@ the files in it will be put in the binary package's control
 information area.
 
 Unless you specify
-.BR \-\-no\-check ", " dpkg\-deb "
+.BR \-\-nocheck ", " dpkg\-deb "
 will read
 .B DEBIAN/control
 and parse it.  It will check it for syntax errors and other problems,
@@ -91,7 +91,7 @@ if no
 .B Architecture
 field is present in the package control file.  When a target directory
 is specified, rather than a file, the
-.B \-\-no\-check
+.B \-\-nocheck
 option may not be used (since
 .B dpkg\-deb
 needs to read and parse the package control file to determine which
