--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -147,12 +147,12 @@ something goes wrong.
 
 \fB2.\fP Run \fIpostinst\fP script, if provided by the package.
 .TP
-\fBdpkg -r\fP | \fB--remove\fP | \fB --purge \fP\fIpackage\fP ... | \fB-a\fP | \fB--pending\fP
+\fBdpkg -r\fP | \fB--remove\fP | \fB-P\fP | \fB--purge \fP\fIpackage\fP ... | \fB-a\fP | \fB--pending\fP
 Remove an installed package.  \fB-r\fP or \fB--remove\fP remove
 everything except configuration files.  This may avoid having to
 reconfigure the package if it is reinstalled later.  (Configuration
 files are the files listed in the \fIdebian/conffiles\fP control
-file).  \fB--purge\fP removes everything, including configuration
+file).  \fB-P\fP or \fB--purge\fP removes everything, including configuration
 files.  If \fB-a\fP or \fB--pending\fP is given instead of a package
 name, then all packages unpacked, but marked to be removed or purged
 in file \fI/var/lib/dpkg/status\fP, are removed or purged,
@@ -170,7 +170,7 @@ Removing of a package consists of the following steps:
 \fB3.\fP Run \fIpostrm\fP script
 .br
 .TP
-.BI "dpkg  --print-avail " package
+.BI "dpkg  -p|--print-avail " package
 Display details about \fIpackage\fP, as found in
 \fI/var/lib/dpkg/available\fP.
 .TP
