--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Oct 21 13:22:42 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Update copyright (taken from dpkg-iwj tree, with Ben added)
+
 Thu Oct 21 06:37:24 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * Fixed some compiler warnings
