--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -546,19 +546,25 @@ and
 
 .SH AUTHORS
 .nf
-\fBdpkg\fP was written by:
-    Ian Jackson <ian@chiark.chu.cam.ac.uk>
-    Klee Dienes <klee@debian.org>
-    Erick Branderhorst <branderhorst@heel.fgg.eur.nl>
-    Miquel van Smoorenburg <miquels@cistron.nl>
-    Kim-Minh Kaplan <kkaplan@cdfhp3.in2p3.fr>
-    Michael Shields <shields@crosslink.net>
-    Bruce Perens <bruce@pixar.com>
-    Streeter <streeter@cae.wisc.edu>
-    Matt Welsh <mdw@sunsite.unc.edu>
-    Ian Murdock <imurdock@debian.org>
-    Colin Plumb
-    Branko Lankester
+Contributions to \fBdpkg\fP have been made by:
+Ian Jackson <ian@davenant.greenend.org.uk>
+Wichert Akkerman <wakkerma@debian.org>
+Ben Collins <bcollins@debian.org>
+Nils Rennebarth <nils@debian.org>
+Miquel van Smoorenburg <miquels@cistron.nl>
+Juan Cespedes <cespedes@debian.org>
+Juho Vuori <javuori@cc.helsinki.fi>
+Charles Briscoe-Smith <cpbs@debian.org>
+Erick Branderhorst <branderhorst@heel.fgg.eur.nl>
+Miquel van Smoorenburg <miquels@cistron.nl>
+Kim-Minh Kaplan <kkaplan@cdfhp3.in2p3.fr>
+Michael Shields <shields@crosslink.net>
+Bruce Perens <bruce@pixar.com>
+Carl Streeter <streeter@cae.wisc.edu>
+Matt Welsh <mdw@sunsite.unc.edu>
+Ian Murdock <imurdock@debian.org>
+Colin Plumb
+Branko Lankester
 .fi
 The manual page was written by Juho Vuori
 <javuori@cc.helsinki.fi> and updated by Jim Van Zandt
