Add support for GNU tar extension for long filenames

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.4.1.17) unstable; urgency=low
 
+  * Add support for long filenames
   * Added --chuid option to start-stop-daemon to allow switching to
     a different uid when starting a process
   * Add mipseb and mipsel to the archtable too, since mips and mipseb are
