--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 dpkg (1.4.1.17) unstable; urgency=low
 
-  * Add support for long filenames
+  * Add support for long filenames, along with --assert-longfilenames
   * Added --chuid option to start-stop-daemon to allow switching to
     a different uid when starting a process
   * Add mipseb and mipsel to the archtable too, since mips and mipseb are
