--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Oct 21 10:22:43 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * Fixed the check that was added to dpkg-divert.
+  * Removed the lib version checking.
+  * Oops, somehow the --config feature went missing from update-
+    alternatives
+
 Thu Oct 21 13:22:42 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Update copyright (taken from dpkg-iwj tree, with Ben added)
