--- a/debian/changelog
+++ b/debian/changelog
@@ -66,7 +66,7 @@ dpkg (1.4.1.17) unstable; urgency=low
     changing the diversion registry
   * Fix bad regex in update-rc.d
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Thu, 21 Oct 1999 17:49:03 +0200
 
 dpkg (1.4.1.16) unstable; urgency=medium
 
