* Fixed incorrect patch for --print-architecture (oops, oh well     it was already broken when there was no gcc anyway :)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Oct 21 12:57:31 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * Fixed incorrect patch for --print-architecture (oops, oh well
+    it was already broken when there was no gcc anyway :)
+
 Thu Oct 21 10:22:43 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * Fixed the check that was added to dpkg-divert.
