--- a/TODO
+++ b/TODO
@@ -21,6 +21,8 @@ urgent
  * openpgp signatures in the package archive
 
 other stuff unlikely to get done soon
+ * Purge a.out compatibility from source (keep the upgrade stuff in
+   place).
  * Automatically remove <file>.gz if <file> can't be found ? and maybe,
    remove <file> if <file.gz> can't be found? Bug mess when we start
    thinking about bz2 :/
