--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+dpkg (1.4.1.18) unstable; urgency=low
+
+  * Fixed incorrect patch for --print-architecture (oops, oh well
+    it was already broken when there was no gcc anyway :)
+
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.4.1.17) unstable; urgency=low
 
   * Add support for long filenames, along with --assert-longfilenames
