* Added armv4l to archtable

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ dpkg (1.4.1.19) unstable; urgency=low
   * Leave file info intact in available when installing packages. MD5sum,
     Filename, and MSDOS-Filename used to get lost when installing a
     package.
+  * Added armv4l to archtable
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
