--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Sat Oct 23 09:22:16 EDT 1999 Ben Collins <bcollins.debian.org>
   * Leave file info intact in available when installing packages. MD5sum,
     Filename, and MSDOS-Filename used to get lost when installing a package.
   * Backout dep check patch (merged from v1_4_1_18)
+  * Added armv4l to archtable
 
 Thu Oct 21 12:57:31 EDT 1999 Ben Collins <bcollins.debian.org>
 
