* Implemented a nice fix for multiple conflicts and replaces. Also added     --assert-multi-conrep.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Oct 23 16:25:16 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * Implemented a nice fix for multiple conflicts and replaces. Also added
+    --assert-multi-conrep.
+
 Sat Oct 23 09:22:16 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * Leave file info intact in available when installing packages. MD5sum,
