--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ dpkg (1.4.1.19) unstable; urgency=low
     Filename, and MSDOS-Filename used to get lost when installing a
     package.
   * Added armv4l to archtable
+  * Implemented a nice fix for multiple conflicts and replaces. Also added
+    --assert-multi-conrep.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
