* Added 'D' to the list of choices for conffile handling

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Oct 23 21:23:08 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * Added 'D' to the list of choices for conffile handling
+
 Sat Oct 23 16:25:16 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * Implemented a nice fix for multiple conflicts and replaces. Also added
