--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ dpkg (1.4.1.19) unstable; urgency=low
   * Added armv4l to archtable
   * Implemented a nice fix for multiple conflicts and replaces. Also added
     --assert-multi-conrep.
+  * Added 'D' to the list of choices for conffile handling, closes: #48137
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
