* debian/control: added dpkg-doc   * debian/dpkg-doc-{postinst,prerm}: new files for dpkg-doc package   * debian/dpkg-internals: doc-base support for dpkg-doc   * debian/rules: added build rules for dpkg-doc to binary-indep target   * doc/Makefile.am: changed build setup for internals.sgml to use the     debiandoc tools, and removed internals.* stuff from being built by     default. Two new targets, internals and internals-install, now handle     this   * doc/changelog: removed, duplicate of ChangeLog   * doc/internals.sgml: converted to debiandoc format, now builds correctly     and without errors   * doc/manuals-version: removed since it is generated at build time   * doc/texinfo.*: moved to doc/obsolete/ since the debiandoc format doesn't     need them   * main/filesdb.c: fixed compiler warning

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,7 +27,11 @@ dpkg (1.4.1.19) unstable; urgency=low
   * Implemented a nice fix for multiple conflicts and replaces. Also added
     --assert-multi-conrep.
   * Added 'D' to the list of choices for conffile handling, closes: #48137
-
+  * Converted internals.sgml to debiandoc format. Also added a dpkg-doc
+    package that contains the generated output from this file (.ps, .html
+    and .info), includes doc-base support. Internals.sgml is also not
+    generated on the binary-arch target, and is no longer "byhand"
+ 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
 dpkg (1.4.1.18) unstable; urgency=low
