--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,9 @@
+debian-manuals (2.1.2.3) unstable;
+
+  * internals.sgml: converted to debiandoc format
+
+ -- Ben Collins <bcollins@debian.org>  Sat, 23 Oct 1999 23:32:48 -0400
+
 debian-manuals (2.1.2.2) frozen unstable;
 
   * Fixed even more typographical and grammatical errors in Policy and 
