--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Oct 25 02:27:49 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/main.cc: Fixup error message for invalid parameter to reflect
+    we are dselect, not dpkg
+
 Sun Oct 24 11:39:21 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * debian/control: added dpkg-doc
