* debian/dpkg-doc-{postrm,prerm}: Added install-info for internals.info   * debian/dpkg-internals: fixed misplaced description

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Ben Collins <bcollins.debian.org>
+
+  * debian/dpkg-doc-{postrm,prerm}: Added install-info for internals.info
+  * debian/dpkg-internals: fixed misplaced description
+
 Mon Oct 25 02:27:49 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/main.cc: Fixup error message for invalid parameter to reflect
