--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Ben Collins <bcollins.debian.org>
+Sun Oct 24 20:25:11 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * debian/dpkg-doc-{postrm,prerm}: Added install-info for internals.info
   * debian/dpkg-internals: fixed misplaced description
