* main/processarc.c: fixes calculation of package filename display (the     ".../foo.deb" one) where it was showing the full path if the basename     was longer than 30 chars. Now shows just the basename if it can't     squeez the full path to < 30 chars (even if the basename is > than 30     chars)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon Oct 25 06:50:17 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * main/processarc.c: fixes calculation of package filename display (the
+    ".../foo.deb" one) where it was showing the full path if the basename
+    was longer than 30 chars. Now shows just the basename if it can't
+    squeez the full path to < 30 chars (even if the basename is > than 30
+    chars)
+
 Sun Oct 24 20:46:44 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * scripts/dpkg-source.pl: we want to 'delete' the POSIXLY_CORRECT env
