--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Oct 25 19:10:50 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Mark more strings for translation in libdpkg and dpkg
+  * Don't bother translating debug-statements
+
 Mon Oct 25 11:55:35 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * scripts/dpkg-shlibdeps: start using objdump as opposed to ldd, this
