Added Czech translation for dpkg

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.4.1.19) unstable; urgency=low
 
   * Add gettext-support to dselect
+  * Added Czech translation for dpkg
   * Fixed incorrect patch for --print-architecture (oops, oh well
     it was already broken when there was no gcc anyway :)
   * Fixed missing mipseb that was supposed to be in the archtable
