--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Oct 25 21:08:06 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Added Czech translation from Petr Cech <cech@atrey.karlin.mff.cuni.cz>
+
 Mon Oct 25 19:10:50 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Mark more strings for translation in libdpkg and dpkg
