--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ Wed Oct 27 21:33:19 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * release.sh: remove attic/ and doc/obsolete/
   * dpkg-gencontrol: add "Source" to the fields placed in the control file
+  * dpkg-parsechangelog: fixed loop for parsepath
 
 Tue Oct 26 19:35:53 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
