* dpkg-shlibdeps: fix ordering for shlibs.default

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,7 +38,7 @@ dpkg (1.4.1.19) unstable; urgency=low
     error reporting. Also corrected checks on shlibs.local, which wasn't
     really being parsed, it now works as advertised.
   * dpkg-gencontrol: add "Source" to the fields placed in the control file
-  * dpkg-parsechangelog: fixed loop for parsepath
+  * dpkg-parsechangelog: fixed loop for parsepath (#48526)
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
