--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Oct 28 10:10:23 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * dpkg-shlibdeps: fix ordering for shlibs.default
+
 Wed Oct 27 21:33:19 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * release.sh: remove attic/ and doc/obsolete/
