--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Oct 28 22:14:49 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Add Polish translation from Piotr Roszatycki <dexter@fnet.pl
+
 Thu Oct 28 10:10:23 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * dpkg-shlibdeps: fix ordering for shlibs.default
