--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Oct 29 10:37:16 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * dpkg-divert: Fix check for writable filesystem, closes: #48646
+
 Thu Oct 28 22:14:49 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Add Polish translation from Piotr Roszatycki <dexter@fnet.pl
