--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Oct 29 16:51:03 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * main/archives.c: s/DPK/DPKG/ from one of the gettext changes
+
 Fri Oct 29 21:16:21 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Fix name for Polish translation
