* po/update.sh: make sure we only update when there are changes,     also autodetect list of .po files we need to change   * release.sh: likewise for .gmo generation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-Fri Oct 29 16:51:03 EDT 1999 Ben Collins <bcollins.debian.org>
+Fri Oct 29 20:16:43 EDT 1999 Ben Collins <bcollins@debian.org
+
+  * po/update.sh: make sure we only update when there are changes,
+    also autodetect list of .po files we need to change
+  * release.sh: likewise for .gmo generation
+
+Fri Oct 29 16:51:03 EDT 1999 Ben Collins <bcollins@debian.org>
 
   * main/archives.c: s/DPK/DPKG/ from one of the gettext changes
 
