Don't translate internal errors

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@ Sat Oct 30 03:31:30 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
   * Make it all build again
   * retro-actively add this ChangeLog entry
   * Removed bogus po/dpkg.po file
+  * No longer translater internal errors.. we want to see the English text
+    in bugreports
 
 Fri Oct 29 20:16:43 EDT 1999 Ben Collins <bcollins@debian.org>
 
