--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Oct 30 16:22:00 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Fix file conflict between dpkg-dev, dpkg
+  * Move changelog.manual to dpkg-doc
+
 Sat Oct 30 03:31:30 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Make it all build again
