--- a/po/dpkg.pot
+++ b/po/dpkg.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1999-10-26 10:35-0400\n"
+"POT-Creation-Date: 1999-10-30 15:10+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -119,10 +119,6 @@ msgstr ""
 
 #: lib/dbmodify.c:150
 msgid "operation requires read/write access to dpkg status area"
-msgstr ""
-
-#: lib/dbmodify.c:162
-msgid "unknown readwritereq"
 msgstr ""
 
 #: lib/dbmodify.c:198
@@ -609,10 +605,6 @@ msgstr ""
 msgid "character `%c' not allowed - only letters, digits and %s allowed"
 msgstr ""
 
-#: lib/parsehelp.c:162
-msgid "bad versiondisplayepochwhen in varbufversion"
-msgstr ""
-
 #: lib/parsehelp.c:180
 msgid "<none>"
 msgstr ""
@@ -785,10 +777,6 @@ msgstr ""
 msgid "error creating directory `%.255s'"
 msgstr ""
 
-#: main/archives.c:468
-msgid "bad tar type, but already checked"
-msgstr ""
-
 #: main/archives.c:498
 #, c-format
 msgid "unable to move aside `%.255s' to install new version"
@@ -918,10 +906,6 @@ msgstr ""
 #: main/archives.c:783
 #, c-format
 msgid "--%s needs at least one package archive file argument"
-msgstr ""
-
-#: main/archives.c:824 main/enquiry.c:456
-msgid "unknown action"
 msgstr ""
 
 #: main/archives.c:848
@@ -1170,10 +1154,6 @@ msgstr ""
 msgid "Don't forget to foreground (`fg') this process when you're done !\n"
 msgstr ""
 
-#: main/configure.c:366
-msgid "unknown response"
-msgstr ""
-
 #: main/configure.c:376
 #, c-format
 msgid "dpkg: %s: warning - failed to remove old backup `%.250s': %s\n"
@@ -1212,10 +1192,6 @@ msgstr ""
 #: main/configure.c:417
 #, c-format
 msgid "unable to install `%.250s' as `%.250s'"
-msgstr ""
-
-#: main/configure.c:421
-msgid "unknown what"
 msgstr ""
 
 #: main/configure.c:473
@@ -1304,18 +1280,6 @@ msgstr ""
 msgid " conflicts with "
 msgstr ""
 
-#: dselect/pkgdepcon.cc:334 main/depcon.c:136
-msgid "unknown deptype"
-msgstr ""
-
-#: main/depcon.c:182
-msgid "unknown status depending"
-msgstr ""
-
-#: main/depcon.c:188
-msgid "unknown istobe depending"
-msgstr ""
-
 #: main/depcon.c:209
 #, c-format
 msgid "  %.250s is to be removed.\n"
@@ -1356,10 +1320,6 @@ msgstr ""
 msgid "  %.250s is %s.\n"
 msgstr ""
 
-#: main/depcon.c:264
-msgid "unknown istobe depended"
-msgstr ""
-
 #: main/depcon.c:294
 #, c-format
 msgid "  %.250s provides %.250s but is to be removed.\n"
@@ -1373,10 +1333,6 @@ msgstr ""
 #: main/depcon.c:303
 #, c-format
 msgid "  %.250s provides %.250s but is %s.\n"
-msgstr ""
-
-#: main/depcon.c:308
-msgid "unknown istobe provider"
 msgstr ""
 
 #. If the package wasn't installed at all, and we haven't said
@@ -1397,10 +1353,6 @@ msgstr ""
 msgid "  %.250s (version %.250s) is %s.\n"
 msgstr ""
 
-#: main/depcon.c:373
-msgid "unknown istobe conflict"
-msgstr ""
-
 #. conflicts and provides the same
 #: main/depcon.c:387
 #, c-format
@@ -1410,10 +1362,6 @@ msgstr ""
 #: main/depcon.c:418
 #, c-format
 msgid "  %.250s provides %.250s and is %s.\n"
-msgstr ""
-
-#: main/depcon.c:429
-msgid "unknown istobe conflict provider"
 msgstr ""
 
 #: main/enquiry.c:51
@@ -1470,10 +1418,6 @@ msgstr ""
 
 #: main/enquiry.c:221
 msgid "<unknown>"
-msgstr ""
-
-#: main/enquiry.c:224
-msgid "unknown status checking for unpackedness"
 msgstr ""
 
 #: main/enquiry.c:237
@@ -1632,10 +1576,6 @@ msgstr ""
 
 #: main/enquiry.c:671
 msgid "no hyphen after gcc-lib"
-msgstr ""
-
-#: main/enquiry.c:679
-msgid "unknown action in printarch"
 msgstr ""
 
 #: main/enquiry.c:683
@@ -1844,22 +1784,6 @@ msgstr ""
 msgid "read error in diversions [i]"
 msgstr ""
 
-#: main/filesdb.c:463
-msgid "iterfilestart no f_largemem"
-msgstr ""
-
-#: main/filesdb.c:485
-msgid "iterfilenext no f_largemem"
-msgstr ""
-
-#: main/filesdb.c:531
-msgid "filesdbinit no f_largemem"
-msgstr ""
-
-#: main/filesdb.c:545
-msgid "findnamenode no f_largemem"
-msgstr ""
-
 #: dselect/pkgdisplay.cc:49 main/help.c:41
 msgid "not installed"
 msgstr ""
@@ -2049,7 +1973,7 @@ msgid ""
 " -x|--extract|-X|--vextract|--fsys-tarfile  on archives (type %s --help.)\n"
 "\n"
 "For internal use: dpkg --assert-support-predepends | --predep-package |\n"
-"  --assert-working-epoch | --assert-longfilenames | --assert-multi-conrep\n"
+"  --assert-working-epoch | --assert-long-filenames | --assert-multi-conrep\n"
 "\n"
 "Options:\n"
 "  --admindir=<directory>     Use <directory> instead of %s\n"
@@ -2192,18 +2116,10 @@ msgstr ""
 msgid "--%s --pending does not take any non-option arguments"
 msgstr ""
 
-#: main/packages.c:100
-msgid "unknown action for pending"
-msgstr ""
-
 #: main/packages.c:116
 msgid ""
 "you must specify packages by their own names, not by quoting the names of "
 "the files they come in"
-msgstr ""
-
-#: main/packages.c:142
-msgid "unknown action for queue start"
 msgstr ""
 
 #: main/packages.c:150
@@ -2216,14 +2132,6 @@ msgstr ""
 msgid ""
 "More than one copy of package %s has been unpacked\n"
 " in this run !  Only configuring it once.\n"
-msgstr ""
-
-#: main/packages.c:159
-msgid "unknown action in duplicate"
-msgstr ""
-
-#: main/packages.c:202
-msgid "unknown action in queue"
 msgstr ""
 
 #: main/packages.c:264 main/packages.c:308 main/packages.c:321
@@ -2264,10 +2172,6 @@ msgstr ""
 #.
 #: main/packages.c:392
 msgid "; however:\n"
-msgstr ""
-
-#: main/packages.c:405
-msgid "unknown value for found"
 msgstr ""
 
 #: main/processarc.c:103
@@ -2615,10 +2519,6 @@ msgstr ""
 msgid "--%s needs exactly one Packages file argument"
 msgstr ""
 
-#: main/update.c:51
-msgid "bad cipaction->arg in updateavailable"
-msgstr ""
-
 #: main/update.c:57
 msgid "unable to access dpkg status area for bulk available update"
 msgstr ""
@@ -2635,10 +2535,6 @@ msgstr ""
 #: main/update.c:69
 #, c-format
 msgid "Updating available packages info, using %s.\n"
-msgstr ""
-
-#: main/update.c:74
-msgid "bad cipaction->arg in update available"
 msgstr ""
 
 #: main/update.c:93
@@ -3926,10 +3822,6 @@ msgstr ""
 msgid "failed to getch in main menu"
 msgstr ""
 
-#: dselect/main.cc:276
-msgid "unknown menufn"
-msgstr ""
-
 #: dselect/main.cc:331
 #, c-format
 msgid "unknown action string `%.50s'"
@@ -4210,22 +4102,6 @@ msgstr ""
 msgid "unable to install new option as `%.250s'"
 msgstr ""
 
-#: dselect/pkgcmds.cc:47
-msgid "unknown statsortorder in affectedmatches"
-msgstr ""
-
-#: dselect/pkgcmds.cc:160
-msgid "unknown statsort in kd_swapstatorder"
-msgstr ""
-
-#: dselect/pkgcmds.cc:171
-msgid "unknown sort in kd_swaporder"
-msgstr ""
-
-#: dselect/pkgcmds.cc:207
-msgid "unknown versiondisplayopt in kd_versiondisplay"
-msgstr ""
-
 #: dselect/pkgdepcon.cc:214
 msgid "(no clientdata)"
 msgstr ""
@@ -4438,10 +4314,6 @@ msgstr ""
 msgid "Purged"
 msgstr ""
 
-#: dselect/pkgdisplay.cc:181
-msgid "unknown versiondisplayopt in setwidths"
-msgstr ""
-
 #: dselect/pkgdisplay.cc:194
 msgid "dselect - recursive package listing"
 msgstr ""
@@ -4466,10 +4338,6 @@ msgstr ""
 msgid " (status, section)"
 msgstr ""
 
-#: dselect/pkgdisplay.cc:213
-msgid "bad statsort in redrawtitle/so_section"
-msgstr ""
-
 #: dselect/pkgdisplay.cc:219
 msgid " (by priority)"
 msgstr ""
@@ -4482,10 +4350,6 @@ msgstr ""
 msgid " (status, priority)"
 msgstr ""
 
-#: dselect/pkgdisplay.cc:228 dselect/pkgdisplay.cc:243
-msgid "bad statsort in redrawtitle/so_priority"
-msgstr ""
-
 #: dselect/pkgdisplay.cc:234 dselect/pkgdisplay.cc:246
 msgid " (alphabetically)"
 msgstr ""
@@ -4496,10 +4360,6 @@ msgstr ""
 
 #: dselect/pkgdisplay.cc:240
 msgid " (by status)"
-msgstr ""
-
-#: dselect/pkgdisplay.cc:251
-msgid "bad sort in redrawtitle"
 msgstr ""
 
 #: dselect/pkgdisplay.cc:254
@@ -4566,40 +4426,12 @@ msgstr ""
 msgid "available version of control info for "
 msgstr ""
 
-#: dselect/pkglist.cc:48
-msgid "unknown statsortorder in compareentries"
-msgstr ""
-
-#: dselect/pkglist.cc:79
-msgid "unsorted or unknown in compareentries"
-msgstr ""
-
 #: dselect/pkglist.cc:121 dselect/pkglist.cc:122
 msgid "<null>"
 msgstr ""
 
-#: dselect/pkglist.cc:207
-msgid "unknown stat in ensurestatsortinfo sso_avail"
-msgstr ""
-
-#: dselect/pkglist.cc:240
-msgid "unknown stat in ensurestatsortinfo sso_state"
-msgstr ""
-
-#: dselect/pkglist.cc:250
-msgid "unknown statsortorder in ensurestatsortinfo"
-msgstr ""
-
-#: dselect/pkgsublist.cc:132
-msgid "unknown verrel"
-msgstr ""
-
 #: dselect/pkgtop.cc:56
 msgid "All"
-msgstr ""
-
-#: dselect/pkgtop.cc:73
-msgid "unknown statsortrder in describemany all"
 msgstr ""
 
 #: dselect/pkgtop.cc:78
