Adding Russian translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Nov  1 23:25:32 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Add partial Russian translation from Michael Sobolev <mss@transas.com>
+
 Sat Oct 30 16:22:00 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Fix file conflict between dpkg-dev, dpkg
