Fix translation mixups

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Nov  2 20:19:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Fix some language mixups: our Polish translation was actually
+    Czech, and we somehow lost the real Polish text..
+
 Mon Nov  1 23:25:32 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Add partial Russian translation from Michael Sobolev <mss@transas.com>
@@ -35,7 +40,7 @@ Fri Oct 29 10:37:16 EDT 1999 Ben Collins <bcollins.debian.org>
 
 Thu Oct 28 22:14:49 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
-  * Add Polish translation from Piotr Roszatycki <dexter@fnet.pl
+  * Add Polish translation from Piotr Roszatycki <dexter@fnet.pl>
 
 Thu Oct 28 10:10:23 EDT 1999 Ben Collins <bcollins.debian.org>
 
