Added Enhances to a few scripts

--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -457,7 +457,7 @@ is
 
 If the same dependency entry (or set of alternatives) appears in more
 than one of the recognised dependency field names
-.BR Pre-Depends ", " Depends ", " Recommends " or " Suggests
+.BR Pre-Depends ", " Depends ", " Recommends ", " Enhances " or " Suggests
 then
 .B dpkg-shlibdeps
 will automatically remove the dependency from all fields except the
