--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Nov  8 17:45:50 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Add support for enhances to dpkg and dselect. dselect doesn't
+    take any action on it yet though
+
 Tue Nov  2 20:19:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Fix some language mixups: our Polish translation was actually
