Correct names for build-depency names according to Bug# 49792

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov 12 01:47:24 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Correct names for build-depency names according to Bug# 49792
+
 Mon Nov  8 17:45:50 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Add support for enhances to dpkg and dselect. dselect doesn't
