--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.4.1.20) unstable; urgency=low
+
+  * Fix mixup with Czech and Polish translations, Closes: Bug# 48986
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.4.1.19) unstable; urgency=low
 
   * Fix replaces for dpkg-dev
