--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Fri Nov 12 01:47:24 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Correct names for build-depency names according to Bug# 49792
+  * .. and for dpkg-source.pl as well
 
 Mon Nov  8 17:45:50 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
