* lib/tarfn.c: add braces around if to fix compiler warning

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Nov 11 20:14:02 EST 1999 Ben Collins <bcollins@debian.org>
+
+  * lib/tarfn.c: add braces around if to fix compiler warning
+
 Fri Nov 12 01:47:24 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Correct names for build-depency names according to Bug# 49792
