--- a/TODO
+++ b/TODO
@@ -12,7 +12,6 @@ urgent
  * Several things ought to be configurable but aren't.
  * Filenames containing newlines.  Conffile names containing spaces.
  * dpkg --status for virtual packages
- * update-alternatives prompting.
  * logging, both transcript logs (kept briefly)
    and action logs (kept forever?)  957
  * start-stop-daemon process status check. 1480
@@ -24,9 +23,9 @@ other stuff unlikely to get done soon
  * Purge a.out compatibility from source (keep the upgrade stuff in
    place).
  * Automatically remove <file>.gz if <file> can't be found ? and maybe,
-   remove <file> if <file.gz> can't be found? Bug mess when we start
+   remove <file> if <file.gz> can't be found? Big mess when we start
    thinking about bz2 :/
- * Local version number (using non-numeric epoch, perhaps ?), or better yet,
+ * Local version number (using non-numeric epoch, perhaps, or better yet,
    a --local option in dpkg, so that it marks this package as a local install
    (when running dpkg -i)? Keeps it from being listed as obsolete, and maybe
    from being considered for auto-upgrades (apt-get needs to know about this
@@ -39,7 +38,8 @@ other stuff unlikely to get done soon
  * single maintainer script, and new package getting there first
  * dpkg -s show something for virtual packages
  * settable defaults for update-rc.d
- * local conffiles
+ * local conffiles, aswell as local files that dpkg should check before
+   overwriting
  * hooks
  * gzip -0 option for dpkg-deb (probably easier to add a -z# option)
  * There is no documentation. 1526
@@ -70,6 +70,7 @@ done
  * conffiles handling options, including `replace removed files'
  * `diff' option at conffile prompt
  * check description in dpkg-deb
+ * update-alternatives prompting.
 
 obsoleted so not done
  * version numbers not starting digit early.
