Rename Japanese translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov 12 21:21:21 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Rename japanses translation to just jp
+
 Thu Nov 11 20:14:02 EST 1999 Ben Collins <bcollins@debian.org>
 
   * lib/tarfn.c: add braces around if to fix compiler warning
