--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Nov 25 03:45:23 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Merge the new buildsystem from the wta_build branch. If you want
+    the old buildsystem check the last-of-automake tag
+
 Fri Nov 19 15:04:10 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * `n' is also searchagain in dselect now
