--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
-dpkg (1.4.1.20) unstable; urgency=low
+dpkg (1.6) unstable; urgency=low
 
+  * Major overhaul of the buildsystem
+  * Move to version 1.6 to reflect the amount of changes made
   * Fix mixup with Czech and Polish translations, Closes: Bug# 48986
   * utils/start-stop-daemon.c: Added ability for user.group arg to
     --chuid. Also, always call initgroups() when using --chuid.
