--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.6) unstable; urgency=low
 
   * Major overhaul of the buildsystem
+  * Update Standards-Version to 3.1.0
   * Move to version 1.6 to reflect the amount of changes made
   * Fix mixup with Czech and Polish translations, Closes: Bug# 48986
   * utils/start-stop-daemon.c: Added ability for user.group arg to
@@ -8,7 +9,7 @@ dpkg (1.6) unstable; urgency=low
   * utils/start-stop-daemon.8: Document above change, also add note to the
     --make-pidfile option concerning its problem with daemons that fork
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Thu, 25 Nov 1999 04:30:01 +0100
 
 dpkg (1.4.1.19) unstable; urgency=low
 
@@ -2242,7 +2243,7 @@ Changes in dpkg 0.93.30:
 
 * Added /usr/sbin/start-stop-daemon.
 
-Changes in dpkg 0.93.29:
+Changes in dpkg 0.93.09:
 
 * Made postinst scripts really be run when dpkg --purge used.
 * Added new --force-extractfail option - VERY DANGEROUS.
