Correct name of source tarball in debian/rules

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Nov 25 04:55:18 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Correct name of source tarball in debian/rules
+
 Thu Nov 25 03:45:23 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Merge the new buildsystem from the wta_build branch. If you want
