--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Nov 26 18:36:22 EST 1999 Ben Collins <bcollins@debian.org>
+
+  * dselect/main.cc: fixed three cases where gettext usage was not
+    possible die to macros inlined in the strings
+
 Fri Nov 26 18:09:17 EST 1999 Ben Collins <bcollins@debian.org>
 
   * configure.in: generate utils/Makefile
