--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.6.1) unstable; urgency=low
+
+  * dselect/main.cc: fixed three cases where gettext usage was not
+    possible die to macros inlined in the strings
+      
+ -- Wichert Akkerman <bcollins@debian.org>  UNRELEASED
+
 dpkg (1.6) unstable; urgency=low
 
   * Major overhaul of the buildsystem
