* utils/start-stop-daemon.c: call initgroups() prior to seteuid()

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Nov 27 09:46:26 EST 1999 Ben Collins <bcollins@debian.org>
+
+  * utils/start-stop-daemon.c: call initgroups() prior to seteuid()
+
 Fri Nov 26 18:36:22 EST 1999 Ben Collins <bcollins@debian.org>
 
   * dselect/main.cc: fixed three cases where gettext usage was not
