--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,8 @@ dpkg (1.6.1) unstable; urgency=low
 
   * dselect/main.cc: fixed three cases where gettext usage was not
     possible die to macros inlined in the strings
-      
+  * utils/start-stop-daemon.c: call initgroups() prior to seteuid()
+
  -- Wichert Akkerman <bcollins@debian.org>  UNRELEASED
 
 dpkg (1.6) unstable; urgency=low
