Various updates; see ChangeLog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
+dpkg (1.6.2) unstable; urgency=low
+
+  * Fix default lispdir, Closes: #51525
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.6.1) unstable; urgency=low
 
-  * dselect/main.cc: fixed three cases where gettext usage was not
-    possible die to macros inlined in the strings
-  * utils/start-stop-daemon.c: call initgroups() prior to seteuid()
+  * Fix some slight packaging errors
 
- -- Wichert Akkerman <bcollins@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Fri, 26 Nov 1999 20:18:48 +0100
 
 dpkg (1.6) unstable; urgency=low
 
