--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Dec  4 04:22:49 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Update the polish translation
+
 Mon Nov 29 21:11:35 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Change default lispdir to $(prefix)/emacs/site-lisp/$PACKAGE
