Update polish translation, add manpage for cleanup-info, update dpkg-scansources to handle trailing blanks.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 dpkg (1.6.2) unstable; urgency=low
 
-  * Fix default lispdir, Closes: #51525
+  * New dpkg-scansources, Closes: #51888
+  * Fix default for elispdir, Closes: #51919,51525
+  * New manpages for cleanup-info and dpkg-divert, Closes: #51539, 46657
+  * Buildsystem updates, Closes: #51525, 51855, 51914
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
