--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sun Dec  5 18:09:36 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Add manpages from Josip Rodin <joy@cibalia.gkvk.hr> for
+    cleanup-info
+  * New dpkg-scansources from Roderick to allow trailing blanks on lines
+  * Correct generation of manual-version
+
 Sat Dec  4 04:22:49 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Update the polish translation
