--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Dec  7 01:26:21 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Commend changes made in pkgdepcon.cc; they're not completely
+    correct yet
+
 Mon Dec  6 01:37:08 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Correct uid/gid-changes in start-stop-daemon, patch from
