--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Dec  7 14:08:21 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Fix display of copyright in menu
+
 Tue Dec  7 01:26:21 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Commend changes made in pkgdepcon.cc; they're not completely
