--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@ Tue Dec  7 14:08:21 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
 Tue Dec  7 01:26:21 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
-  * Commend changes made in pkgdepcon.cc; they're not completely
+  * Comment changes made in pkgdepcon.cc; they're not completely
     correct yet
 
 Mon Dec  6 01:37:08 CET 1999 Wichert Akkerman <wakkerma@debian.org>
