Drop emacs byte-compiling support

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.6.4) unstable; urgency=low
+
+  * No longer byte-compile for emacs
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.6.3) unstable; urgency=high
 
   * Comment dselect changes from 1.6.2, they seem to have a problem
