--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Dec  7 17:41:17 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Drop the emacs bytecompile-stuff completely
+
 Tue Dec  7 14:08:21 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Fix display of copyright in menu
