--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Dec  8 01:36:35 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Update Czech translation
+
 Tue Dec  7 17:41:17 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Drop the emacs bytecompile-stuff completely
