Add Swedish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec 12 00:41:01 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Add Swedish translation from peter karlsson <pk@mds.mdh.se>
+
 Wed Dec  8 01:36:35 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Update Czech translation
