Rename cvsclean to distclean Update Swedish translation (bork bork!) Check exitnodo-flag in do_stop

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Dec 12 17:20:12 CET 1999
+
+  * Update the Swedish translation
+  * start-stop-daemon.c: check exitnodo-flag if we fail to kill a
+    process
+
 Sun Dec 12 00:41:01 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Add Swedish translation from peter karlsson <pk@mds.mdh.se>
