--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 dpkg (1.6.4) unstable; urgency=low
 
   * No longer byte-compile for emacs
+  * Add Swedish translation
+  * start-stop-daemon: honour --oknodo if we fail to kill a process
+    Closes: Bug# 52580
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
