dselect/main.cc: We need to printf programdesc as well autogen.sh: Remove libtoolize call automake/sysconf.m4: new autoconf-macros for sysconf filesdb/main.c: also check MEMINFO_IN_SYSINFO configure.in: remove ugly sysinfo-hacks to use new ac macros instead utils/start-stop-daemon.c: modify to build on sunos

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
-Sun Dec 12 17:20:12 CET 1999
+Sun Dec 12 23:59:25 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/main.cc: We need to printf programdesc as well
+  * autogen.sh: Remove libtoolize call
+  * automake/sysconf.m4: new autoconf-macros for sysconf
+  * filesdb/main.c: also check MEMINFO_IN_SYSINFO
+  * configure.in: remove ugly sysinfo-hacks to use new ac macros instead
+  * utils/start-stop-daemon.c: modify to build on sunos
+
+Sun Dec 12 17:20:12 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Update the Swedish translation
   * start-stop-daemon.c: check exitnodo-flag if we fail to kill a
