--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,8 @@ dpkg (1.6.4) unstable; urgency=low
   * No longer byte-compile for emacs
   * Add Swedish translation
   * start-stop-daemon: honour --oknodo if we fail to kill a process
-    Closes: Bug# 52580
+    Closes: Bug#52580,#52185
+  * Fix dselect program description, Closes: Bug#52328
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
