--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Tue Dec 14 20:08:58 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * automake/sysconf.m4: really add the file this time
+  * po/sv.po: new version with minor corrections
+  * main/depcon.c: minor corrections to depisok()
+
+Mon Dec 13 15:18:03 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-gencontrol.pl: use findarch to get the architecture
+
 Sun Dec 12 23:59:25 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/main.cc: We need to printf programdesc as well
