--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ dpkg (1.6.4) unstable; urgency=low
   * start-stop-daemon: honour --oknodo if we fail to kill a process
     Closes: Bug#52580,#52185
   * Fix dselect program description, Closes: Bug#52328
+  * Fix architecture-detection in dpkg-gencontrol, Closes: Bug#52616
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
