--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Tue Dec 14 20:08:58 CET 1999 Wichert Akkerman <wakkerma@debian.org>
   * automake/sysconf.m4: really add the file this time
   * po/sv.po: new version with minor corrections
   * main/depcon.c: minor corrections to depisok()
+  * scripts/dpkg-buildpackage.sh: fix -nc option
 
 Mon Dec 13 15:18:03 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
