Make it possible to not build dselect

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec 15 00:18:30 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Add option to disable building dselect
+  * Add config.sub and config.guess
+
 Tue Dec 14 20:08:58 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * automake/sysconf.m4: really add the file this time
