More autoconf updates

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 Wed Dec 15 00:18:30 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
-  * Add option to disable building dselect
+  * configure.in: Add option to disable building dselect
+  * configure.in: Test for ptrdiff_t and stddef.h
+  * config.h.bot: iclude stddef.h if it exists
   * Add config.sub and config.guess
 
 Tue Dec 14 20:08:58 CET 1999 Wichert Akkerman <wakkerma@debian.org>
