autogen.sh: copy gettextm4, lcmessage.m4 and progtest.m4 to automake/ systems without gettext installed Makefile.in: remove the gettext-macros in distclean utils/Makefile.in: fix clean target, link md5sum and start-stop-daemon optlib optlib/*: getopt implementation for systems without GNU getopt.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Wed Dec 15 16:08:47 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * autogen.sh: copy gettextm4, lcmessage.m4 and progtest.m4 to automake/
+    for systems without gettext installed
+  * Makefile.in: remove the gettext-macros in distclean
+  * utils/Makefile.in: fix clean target, link md5sum and start-stop-daemon
+    with optlib
+  * optlib/*: getopt implementation for systems without GNU getopt.
+
 Wed Dec 15 00:18:30 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * configure.in: Add option to disable building dselect
