utils/start-stop-daemon.c: Fix OS-detection for sunos utils/update-rc.d: Accept single-number values, since they are always in the [0,99] range

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec 16 15:20:11 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * utils/start-stop-daemon.c: Fix OS-detection for sunos
+  * utils/update-rc.d: Accept single-number values, since they are
+    always in the [0,99] range
+
 Wed Dec 15 16:08:47 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * autogen.sh: copy gettextm4, lcmessage.m4 and progtest.m4 to automake/
