--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dpkg (1.6.4) unstable; urgency=low
     Closes: Bug#52580,#52185
   * Fix dselect program description, Closes: Bug#52328
   * Fix architecture-detection in dpkg-gencontrol, Closes: Bug#52616
+  * Accept single-number values in update-rc.d, Closes: Bug#46810
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
