Makefile.conf.in: use @libdir@ and @admindir@ configure.in: add --with-admindir option and change the default to $libdir/db debian/rules: add --with-admindir=/var/lib/dpkg scripts/debian-changelog-mode.el: update location of GPL scripts/dpkg-name.sh: update location of GPL

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Fri Dec 17 00:41:50 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Makefile.conf.in: use @libdir@ and @admindir@
+  * configure.in: add --with-admindir option and change the default
+    to $libdir/db
+  * debian/rules: add --with-admindir=/var/lib/dpkg
+  * scripts/debian-changelog-mode.el: update location of GPL
+  * scripts/dpkg-name.sh: update location of GPL
+
 Thu Dec 16 15:20:11 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * utils/start-stop-daemon.c: Fix OS-detection for sunos
