Fix typo in swedish translation

--- a/po/sv.po
+++ b/po/sv.po
@@ -451,7 +451,7 @@ msgstr "underprocess %s gav felkod %d"
 #: lib/mlib.c:110
 #, c-format
 msgid "subprocess %s killed by signal (%s)%s"
-msgstr "underprocess %d dödad av signal (%s)%s"
+msgstr "underprocess %s dödad av signal (%s)%s"
 
 #: lib/mlib.c:113
 #, c-format
