Fix wrong formatting of dpkg-divert manpage

--- a/scripts/dpkg-divert.8
+++ b/scripts/dpkg-divert.8
@@ -17,11 +17,11 @@ dpkg-divert -- override a package's version of a file
 .SH DESCRIPTION
 File `diversions' are a way of forcing dpkg not to install a file into its
 location, but to a `diverted' location. Diversions can be used through the
-package maintainer scripts to move a file away when it causes a conflict.
-System administrators can also use it to override some package's
-configuration file, or whenever some files (which aren't marked as
-'conffiles') need to be preserved by dpkg, when installing a newer version
-of a package which contains those files.
+Debian package scripts to move a file away when it causes a conflict. System
+administrators can also use it to override some package's configuration
+file, or whenever some files (which aren't marked as 'conffiles') need to be
+preserved by dpkg, when installing a newer version of a package which
+contains those files.
 .sp
 .B dpkg-divert
 is the utility used to set up and update the list of diversions. It
