scripts/dpkg-scansoures.pl: don't use \z since that is perl5.005-specific. debian/rules: fix typo so cleanup-info.8 actually gets installed

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.6.5) unstable; urgency=low
+
+  * Don't use \z in dpkg-scansources, Closes: Bug# 53182
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.6.4) unstable; urgency=low
 
   * No longer byte-compile for emacs
